--- a/JayTown/JayTown.csproj
+++ b/JayTown/JayTown.csproj
@@ -27,6 +27,9 @@
   		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
   	</Content>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Content\Textures\PixelMaps\" />
+  </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
