--- a/JayTown/JayTown.csproj
+++ b/JayTown/JayTown.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Textures\PixelMaps\" />
+    <Folder Include="Content\Textures\Tiles\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
